RESOLVED FIXED12820
REGRESSION (r19706): Caret not painted after popup, failing editing/pasteboard/4641033
https://bugs.webkit.org/show_bug.cgi?id=12820
Summary REGRESSION (r19706): Caret not painted after popup, failing editing/pasteboar...
mitz
Reported 2007-02-19 16:30:08 PST
To reproduce, open LayoutTests/editing/pasteboard/4641033.html. Notice that the caret isn't painting when it is positioned right after the <select> element. This is a regression from r19706 (fix for bug 11974).
Attachments
another attempt to figure out who should paint the caret (1.86 KB, patch)
2007-02-20 07:50 PST, Antti Koivisto
timothy: review-
yet another (14.68 KB, patch)
2007-02-20 17:37 PST, Antti Koivisto
hyatt: review+
Antti Koivisto
Comment 1 2007-02-20 07:50:50 PST
Created attachment 13273 [details] another attempt to figure out who should paint the caret Caret should generally be painted by the containing block of the caret node. Only exception is when the caret node is itself a block and the caret is inside it (not after it). This happens with empty editable block elements.
Dave Hyatt
Comment 2 2007-02-20 14:20:35 PST
Comment on attachment 13273 [details] another attempt to figure out who should paint the caret r=me
Antti Koivisto
Comment 3 2007-02-20 17:37:56 PST
Created attachment 13284 [details] yet another - added method to SelectionController for testing if caret is inside or outside the node based on Justin's comments - added test case for <div editable><select> case too
Timothy Hatcher
Comment 4 2007-02-21 08:45:12 PST
Comment on attachment 13273 [details] another attempt to figure out who should paint the caret Clearing the review, there is a new patch.
Dave Hyatt
Comment 5 2007-02-21 16:43:44 PST
Comment on attachment 13284 [details] yet another r=me
Sam Weinig
Comment 6 2007-02-21 19:24:29 PST
Landed in r19785.
Note You need to log in before you can comment on or make changes to this bug.