LayoutTests:

Reviewed by Hyatt.

        http://bugs.webkit.org/show_bug.cgi?id=12820
        REGRESSION (r19706): Caret not painted after popup, failing editing/pasteboard/4641033

        add test for caret before <select> case too

        * editing/selection/caret-before-select-expected.checksum: Added.
        * editing/selection/caret-before-select-expected.png: Added.
        * editing/selection/caret-before-select-expected.txt: Added.
        * editing/selection/caret-before-select.html: Added.

WebCore:

        Reviewed by Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12820
        REGRESSION (r19706): Caret not painted after popup, failing editing/pasteboard/4641033

        Yet another attempt to figure out exactly who should paint the caret.

        * editing/SelectionController.cpp:
        (WebCore::SelectionController::isInsideNode):
        * editing/SelectionController.h:
        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::paintCaret):



Canonical link: https://commits.webkit.org/16637@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19785 268f45cc-cd09-0410-ab3c-d52691b4dbfc